--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "main": "./lib/parcel",
   "version": "0.0.0",
   "description": "A short description of your package",
-  "activationEvents": ["parcel:toggle"],
   "repository": "https://github.com/atom/parcel",
   "license": "MIT",
   "engines": {
     "atom": ">0.50.0"
   },
   "dependencies": {
+    "season": "~1.0"
   }
 }
